--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>Hello</h1>
+<span class="glf-button" data-glf-cuid="af3b5f04-6cb2-4449-8e10-b43a9e1ef626" data-glf-ruid="affbad65-4814-4c1b-bc45-ae8559686bad" >See MENU & Order</span>
+<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
