--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
         }
 
         #container01 {
-            background-image: linear-gradient(to top, rgba(94, 92, 89, 0.38), rgba(94, 92, 89, 0.38)), url('assets/images/container01.jpg?v=bc4b5dcd');
+            background-image: linear-gradient(to top, rgba(94, 92, 89, 0.38), rgba(94, 92, 89, 0.38)), url('./Chef Guo - Asian Foodtruck Luxembourg_files/container01.jpg?v=bc4b5dcd');
             background-position: 0% 0%, 50% calc(0% - (((var(--scroll-y, 0) * 1px) - (var(--element-top, 0) * 1px)) * var(--background-parallax-intensity, 0)));
             background-repeat: repeat, repeat;
             background-size: auto, cover;
