--- a/index.html
+++ b/index.html
@@ -1650,7 +1650,7 @@
 
         .image.style3 .frame {
             width: 100vw;
-            height: 28rem;
+            height: 34rem;
             box-shadow: 0.225rem 0.974rem 3.375rem 0rem rgba(36, 24, 24, 0.22);
             transition: none;
         }
@@ -3548,54 +3548,28 @@
                                 <tr>
                                     <th>Jour (Day)</th>
                                     <th>Horaire (Time)</th>
-                                    <th>Location (Place)</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Lundi</td>
-                                    <td>11h - 14h</td>
-                                    <td>Balthazar Constructions - 4 rue de Bitbourg, 1273 <strong>HAMM</strong></td>
+                                    <td>Lundi - Vendredi</td>
+                                    <td>11:00 - 13:30</td>
                                 </tr>
                                 <tr>
-                                    <td>Mardi</td>
-                                    <td>11h - 14h</td>
-                                    <td>15 rue Léon Laval, 3372 <strong>LEUDELANGE</strong></td>
+                                    <td>Lundi - Vendredi</td>
+                                    <td>17:00 - 21:00</td>
                                 </tr>
                                 <tr>
-                                    <td>Mardi</td>
-                                    <td>17h30 - 20h30</td>
-                                    <td>5 rue du Fossé, 7772 <strong>BISSEN</strong></td>
+                                    <td>Samedi</td>
+                                    <td>17:00 - 21:00</td>
                                 </tr>
                                 <tr>
-                                    <td>Mercredi</td>
-                                    <td>11h - 14h</td>
-                                    <td>Route de Trèves, 1638 <strong>AEROPORT</strong></td>
+                                    <td>Dimanche</td>
+                                    <td>11:00 - 13:30</td>
                                 </tr>
                                 <tr>
-                                    <td>Mercredi</td>
-                                    <td>17h30 - 20h30</td>
-                                    <td>Arrêt de bus Hondsbreck <strong>ALZINGEN</strong></td>
-                                </tr>
-                                <tr>
-                                    <td>Jeudi</td>
-                                    <td>11h - 14h</td>
-                                    <td>9 rue Gabriel Lippman, 5365 <strong>SCHUTTRANGE</strong></td>
-                                </tr>
-                                <tr>
-                                    <td>Jeudi</td>
-                                    <td>17h30 - 20h30</td>
-                                    <td>Parking Botterkraïz, 10 N 13 <strong>GARNICH</strong></td>
-                                </tr>
-                                <tr>
-                                    <td>Vendredi</td>
-                                    <td>11h - 14h</td>
-                                    <td>POST Luxembourg - Point POST Courrier <strong>CLOCHE D'OR</strong></td>
-                                </tr>
-                                <tr>
-                                    <td>Vendredi</td>
-                                    <td>17h30 - 20h30</td>
-                                    <td>Parking Botterkraïz, 10 N 13 <strong>GARNICH</strong> <em>(ou autre)</em></td>
+                                    <td>Dimanche</td>
+                                    <td>17:00 - 21:00</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -3642,18 +3616,25 @@
                                                 <use xlink:href="#icon-e742d247c52c40ea9546d95fc0ead423"></use>
                                             </svg><span class="label">+352 671 889 986</span></a></li>
                                 </ul>
+                            </div>
+                            <div class="table-inner">
+                                <table><tr>
+                                    <td>
                                 <div id="image06" class="style4 image"><span class="frame"><img
                                             src="./Chef Guo - Asian Foodtruck Luxembourg_files/image06.jpg"
                                             alt=""></span></div>
                                 <p id="text16" class="style2">Nous parlons français</p>
+                            </td><td>
                                 <div id="image05" class="style4 image"><span class="frame"><img
                                             src="./Chef Guo - Asian Foodtruck Luxembourg_files/image05.jpg"
                                             alt=""></span></div>
                                 <p id="text17" class="style2">We speak english</p>
+                            </td><td>
                                 <div id="image08" class="style4 image"><span class="frame"><img
                                             src="./Chef Guo - Asian Foodtruck Luxembourg_files/image08.jpg"
                                             alt=""></span></div>
                                 <p id="text11" class="style2">我们说中文</p>
+                                </td></tr></table>
                             </div>
                             
                         </div>
@@ -3664,8 +3645,8 @@
                         <div class="inner">
                             <div>
                                 <h3 id="text12" class="style4">Lai Junxiao - Chef Guo</h3>
-                                <p id="text13" class="style6">20, rue d'Hesperange, L-5959 Itzig</p>
-                            </div><span></span>
+                                <p id="text13" class="style6">5761 Hassel - Weiler la tour</p>
+                            </div>
                             <div>
                                 <ul id="icons01" class="style1 icons">
                                     <li><a class="n01" href="tel:+352671889986"><svg aria-labelledby="icon-title">
