--- a/index.html
+++ b/index.html
@@ -3510,7 +3510,7 @@
                 <div id="container02" class="style2 container default full screen">
                     <div class="wrapper">
                         <div class="inner">
-                            <h2 id="text04" class="style1">Le menu du Foodtruck CHEF GUO</h2>
+                            <h2 id="text04" class="style1">Le menu du Foodtruck CHEF GUO - HASSEL</h2>
                             <div id="image10" class="style5 image full" data-position="center"><span class="frame"><img
                                         src="./Chef Guo - Asian Foodtruck Luxembourg_files/image10.jpg" alt=""></span>
                             </div>
