--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Chef Guo - Asian Foodtruck Luxembourg</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="light only">
-    <meta name="description" content="Chef Guo - Asian Foodtruck Luxembourg">
-    <meta property="og:site_name" content="Chef Guo - Asian Foodtruck Luxembourg">
-    <meta property="og:title" content="Chef Guo - Asian Foodtruck Luxembourg">
+    <meta name="description" content="Chef Guo - Asian Healthy Fast-Food Luxembourg">
+    <meta property="og:site_name" content="Chef Guo - Asian Healthy Fast-Food Luxembourg">
+    <meta property="og:title" content="Chef Guo - Asian Healthy Fast-Food Luxembourg">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Chef Guo - Asian Foodtruck Luxembourg">
+    <meta property="og:description" content="Chef Guo - Asian Healthy Fast-Food Luxembourg">
     <meta property="og:image" content="https://chefguo.lu/assets/images/share.jpg?v=bc4b5dcd">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="469">
     <meta property="og:image:height" content="470">
-    <meta property="og:url" content="https://chefguo.lu">
+    <meta property="og:url" content="https://chefguohassel.lu">
     <meta property="twitter:card" content="summary_large_image">
-    <link rel="canonical" href="https://chefguo.lu/">
+    <link rel="canonical" href="https://chefguohassel.lu/">
     <link href="./Chef Guo - Asian Foodtruck Luxembourg_files/css2" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="https://chefguo.lu/assets/images/favicon.png?v=bc4b5dcd">
     <link rel="apple-touch-icon" href="https://chefguo.lu/assets/images/apple-touch-icon.png?v=bc4b5dcd">
@@ -3482,7 +3482,7 @@
                                         src="./Chef Guo - Asian Foodtruck Luxembourg_files/image03.jpg" alt=""></span>
                             </div>
                             <h2 id="text02" class="style3"><span class="p"><mark>Chef Guo</mark><br> <mark>Asian
-                                        Foodtruck</mark></span></h2>
+                                        Healthy Fast-Food</mark></span></h2>
                             <p id="text10" class="style6">Faites appel à nous pour vos évènements !</p>
                             <ul id="icons03" class="style1 icons">
                                 <li><a class="n01" href="tel:+352671889986"><svg aria-labelledby="icon-title">
