--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Chef Guo - Asian Foodtruck Luxembourg</title>
+    <title>Chef Guo - Asian Healthy Fast-Food Luxembourg</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="light only">
     <meta name="description" content="Chef Guo - Asian Healthy Fast-Food Luxembourg">
